# projeto-api-sql

./: README.md  hola.py  pyproject.toml
data/: products_0+1.json  products_1+1.json  products_2+1.json
